add styled component

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "nanoid": "^4.0.2",
+    "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
