--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-08-phonebook",
+  "name": "Contact-book",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stark1269.github.io/goit-react-hw-08-phonebook/",
+  "homepage": "https://stark1269.github.io/Contact-book/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
