--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Contact-book",
+  "name": "Contact-book-react",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://stark1269.github.io/Contact-book/",
